[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'masternode-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.masternode-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['masternode-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
